<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="270dp"
        android:id="@+id/querylist_spinner"
        android:layout_marginTop="15dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/query_prompt"
        android:entries="@array/query_array"/>

    <Button
        android:text="@string/showresult_btn"
        android:layout_width="wrap_content"
        android:id="@+id/showResult_btn"
        android:layout_gravity="right"
        android:layout_height="40dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false" />

    <ScrollView
        android:id="@+id/query_result"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />-->
    </ScrollView>

    <Button
        android:text="@string/goBack_btn"
        android:layout_width="wrap_content"
        android:id="@+id/goBack_btn"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_height="40dp" />
</LinearLayout>