<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PriyaSActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/goCheckOut_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/goCheckOut_btn"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:textAllCaps="false" />

        <Button
            android:text="@string/goDoQuery_btn"
            android:layout_height="wrap_content"
            android:id="@+id/goDoQuery_btn"
            android:layout_marginTop="100dp"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>

